2006-04-11  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h: Add __attribute_const macro to
	portably mark functions as __attribute__((const))

2006-03-28  Roland Dreier  <rdreier@cisco.com>

	* src/init.c (load_driver): Print warning if dlopen() of a driver
	plugin fails.

2006-03-22  Dotan Barak  <dotanb@mellanox.co.il>

	* examples/asyncwatch.c: Print asynchronous event name as well as
	raw integer value.
	
2006-03-22  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h (ibv_req_notify_cq): Document
	parameters better.

2006-03-16  Roland Dreier  <rdreier@cisco.com>

	* src/cmd.c, src/device.c, src/memory.c, src/verbs.c: Add include
	of <stdlib.h> to get a declaration of free() and avoid compile
	warnings.

2006-03-14  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0.2.

	* Makefile.am (EXTRA_DIST): Remove debian/ directory from
	tarballs, since Debian policy is that upstream tarballs should not
	include it.

2006-03-13  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0.1.

	* src/init.c (check_abi_version), src/verbs.c (ibv_query_gid,
	ibv_query_pkey): Use sysfs_open_attribute() and
	sysfs_read_attribute() instead of the deprecated function
	sysfs_read_attribute_value(), which is no longer present in
	libsysfs2 (which is already in Debian and Ubuntu).

	* Release version 1.0.

2006-03-06  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h: Add enum ibv_rate to define encoding
	of static_rate field (based on a patch from Jack Morgenstein
	<jackm@mellanox.co.il>).

2006-03-06  Ralph Campbell  <ralphc@pathscale.com>

	* src/init.c (find_drivers): Fix minor memory leak: call
	globfree() to free memory allocated by glob().

2006-02-23  Dotan Barak  <dotanb@mellanox.co.il>

	* src/cmd.c (ibv_cmd_create_srq): Add support for kernel ABI
	version 6 (take SRQ capacity from kernel response to create SRQ).

2006-02-16  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0-rc7.
